# venja-rust

./: .env.example  .gitignore  Cargo.toml  LICENSE.txt  Makefile.toml  README.md  azure-pipelines.yml
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md
app/: .gitignore  package.json
app/src/: App.tsx
migrations/2019-04-17-123637_create_users/: up.sql
src/: app.rs  config.rs  graphql.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  repository.rs  router.rs  schema.rs  server.rs
src/handlers/: graphql.rs  health.rs
src/middleware/: diesel.rs
src/middleware/diesel/: repo.rs
src/models/: user.rs
src/server/: resources.rs
