[package]
name = "venja"
version = "0.1.0"
authors = ["Jan David <jandavid@6a64.com>"]
edition = "2018"

[dependencies]
bcrypt = "0.4.0"
chrono = "0.4.6"
diesel = { version = "1.4.2", features = ["chrono", "postgres", "r2d2", "uuidv07"] }
dotenv = "0.14.1"
env_logger = "0.6.1"
futures = "0.1.27"
gotham = "0.3.0"
gotham_derive = "0.3.0"
hyper = "0.12.29"
juniper = "0.12.0"
log = "0.4.6"
mime = "0.3.13"
r2d2 = "0.8.4"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"
tokio-threadpool = "0.1.14"
uuid = "0.7.4"
