[package]
name = "venja"
version = "0.1.0"
authors = ["Jan David <jandavid@6a64.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.5"
bcrypt = "0.5.0"
chrono = "0.4.7"
diesel = { version = "1.4.2", features = ["chrono", "postgres", "r2d2", "uuidv07"] }
dotenv = "0.14.1"
env_logger = "0.6.2"
futures = "0.1.28"
juniper = "0.13.1"
log = "0.4.8"
mime = "0.3.13"
r2d2 = "0.8.5"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
tokio-threadpool = "0.1.15"
uuid = "0.7.4"
